# sofia

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
src/sofia/: all.cppm  compiler.cppm  main.cpp
src/sofia/ir/: all.cppm  ir_generator.cppm
src/sofia/parsing/: all.cppm  parser.cppm
src/sofia/parsing/lexis/: all.cppm  token.cppm  token_type.cppm  tokenizer.cppm  tokenizer_config.cppm
src/sofia/parsing/syntax/: all.cppm  ast_builder.cppm  ast_node.cppm
src/sofia/semantic/: all.cppm  analyzer.cppm  type.cppm
src/sofia/util/: all.cppm  typedefs.cppm
src/sofia/util/containers/: all.cppm  chunked_arena.cppm  string_pool.cppm
src/sofia/util/fmt/: all.cppm  enums.cppm  objects.cppm  optionals.cppm  pointers.cppm  variants.cppm
src/sofia/util/fs/: all.cppm  reading.cppm
src/sofia/util/meta/: all.cppm  enums.cppm  macros.hpp  property.cppm  reflection.cppm
src/sofia/util/source/: all.cppm  detailed_source_reference.cppm  source_message.cppm  source_message_type.cppm  source_reference.cppm
